analisis de db titanic en excel

--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Actividad 2</title>
 </head>
 <body>
     <h1>Activida #2</h1>
     <h4>Campista: John Alexander Guerrero</h4>
-    <a href="https://docs.google.com/document/d/1nWhT3P3bs4FHK-WBYS9wV-Ro8Ou8-YeR/edit?usp=sharing&ouid=117828305800938491133&rtpof=true&sd=true">Link acceso a la solucion actividad pagina 2</a>
+    <a href="">Link acceso actividad 1</a>
+    <br>
+    <a href="https://docs.google.com/document/d/1EPK1o6NHm1AqZLyApB6hRPMRQS4PwrKo/edit?usp=sharing&ouid=117828305800938491133&rtpof=true&sd=true" target="_blank">Link acceso a la solucion actividad pagina 2</a>
+    <br>
+    <a href="https://docs.google.com/spreadsheets/d/1gd5eD2u086jp9cO_Dfw19AsxHGi-aNxQ/edit?usp=sharing&ouid=117828305800938491133&rtpof=true&sd=true" target="_blank">Link acceso a hoja de calculo de analisis univariados</a>
 </body>
 </html>
